--- a/index.html
+++ b/index.html
@@ -39,7 +39,20 @@
 
                    
                 </div>
-                <div id="info"></div>
+                <article class="day__info hidden">
+                <div id="output">
+                    <p></p>
+                    <button id = "edit">Edit</button>
+                </div>
+                <div  class = "day__form" id="input">
+                    <label>
+                         <textarea id ="text" rows="20">  Type something</textarea>
+                    </label>
+                    <button id = "submit" >Save</button>
+                </div>
+
+                </article>
+                
             </div>
 <script src ="js/app.js"></script>
 </body>
